<resources>
    <string name="app_name">StockMate</string>
    <string name="button">Button</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login_screen_content_description">login screen description</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">login</string>
    <string name="name_label">Item name</string>
    <string name="name_hint">name</string>
    <string name="description_label">Item description</string>
    <string name="description_hint">description</string>
    <string name="quantity_label">Quantity</string>
    <string name="quantity_hint">qty</string>
    <string name="name">name of item</string>
    <string name="description">item description</string>
    <string name="quantity">quantity</string>
    <string name="register">register</string>
    <string name="instructions_homepage">There are no elements in the list. You can add a new item by using the + buttton</string>
    <string name="add_Item">add item</string>
    <string name="stockmate_logo">StockMate Logo</string>
    <string name="home_page">Home</string>
    <string name="login_register">Login/Registration</string>
    <string name="receive_notifications">Notifications</string>
    <string name="sms_notification_justification">Toggle on for notifications</string>
    <string name="edit_item_detail">Edit item</string>
    <string name="delete_item">Delete</string>
    <string name="Quantity">Quantity Regulation</string>
    <string name="qty">Qty</string>
    <string name="add_button">add button</string>
    <string name="remove_button">remove button</string>
    <string name="stockmate_logo_field">StockMate logo</string>
    <string name="login_button">Login button</string>
    <string name="menu_overflow">overflow menu</string>
    <string name="overflow_menu">overflow menu</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_menu">Edit</string>
    <string name="item_menu">Item</string>
    <string name="home_item">home list</string>
    <string name="empty_list">"No Inventory. Add a new Item "</string>
    <string name="delete_confirmation_title">Are you sure you want to delete item?</string>
    <string name="delete_confirmation">Delete item</string>
    <string name="save_error">Error saving</string>
    <string name="delete_error">Error deleting item</string>
    <string name="edit_item">Edit item</string>
    <string name="remove_item">Remove item</string>
    <string name="save_item">Save</string>
    <string name="add_item">add item</string>
    <string name="logout_text">logout</string>
    <string name="manage_notifications">manage notifications</string>
    <string name="sms_notification_dialog_title">Notifications</string>
</resources>