<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            android:elevation="1dp"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:navigationIconTint="@color/white"
            app:title="Home "
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/homeList"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:navigationIconTint="@color/white"
        app:title="@string/home_item"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/overflow_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="535dp"
        android:contentDescription="@string/overflow_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/add2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIconTint="@color/white"
        app:srcCompat="@drawable/overflow"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/add2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="108dp"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/add_button"
        app:layout_constraintBottom_toBottomOf="@+id/remove2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/remove2"
        app:srcCompat="@drawable/add"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/remove2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/remove_button"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumberSigned"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:srcCompat="@drawable/remove"
        tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextNumberSigned"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="0"

        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/add2"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toEndOf="@+id/remove2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>