<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homePageLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/overflow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="375dp"
            android:layout_marginTop="17dp"
            app:navigationIconTint="@color/white"
            app:srcCompat="@drawable/overflow"
            app:tint="@color/white"
            android:contentDescription="@string/overflow_menu" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/homePageToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-41dp"


            android:elevation="1dp"
            app:title="@string/home_page"
            app:titleTextColor="@color/white" />


    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_Item"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/green" />

    <TextView
        android:id="@+id/homeScreenText"
        android:contentDescription="@string/overflow_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="344dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/instructions_homepage"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inventory_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>